# subset-sum

./: README.md  pyproject.toml
src/subset_sum/: __init__.py
